fix(Shop): hide buy custom item when overflow

--- a/assets/scss/layouts/_shop.scss
+++ b/assets/scss/layouts/_shop.scss
@@ -224,6 +224,7 @@
         margin-bottom: 0.9em;
       }
       .buy-custom-mosaic {
+        overflow-x: hidden; 
         display: flex;
       }
       .buy-custom-item:hover {
